Test code improvements for chrome and firefox

--- a/test-output/old/ShopHomePageTestsSuite/methods-alphabetical.html
+++ b/test-output/old/ShopHomePageTestsSuite/methods-alphabetical.html
@@ -1,26 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ShopHomePageTestsSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:15:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.acceptCookiesTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">acceptCookiesTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:15:58</td>   <td>3460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillCarFilterFormTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">fillCarFilterFormTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>23/11/14 02:16:11</td>   <td>15682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.fillEnquireNowCarFormNegativeTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,boolean,boolean,boolean,boolean,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@74f0ea28]">fillEnquireNowCarFormNegativeTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:15:56</td>   <td>1050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillLocationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">fillLocationFormTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>23/11/14 02:16:09</td>   <td>13856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.getCarTechDetailTest(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@74f0ea28]">getCarTechDetailTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:15:58</td>   <td>3169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.openCarFilterFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">openCarFilterFormTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>23/11/14 02:16:09</td>   <td>14283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.openEnquireNowFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@74f0ea28]">openEnquireNowFormTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:16:07</td>   <td>12235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.selectFirstCarAvailableTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">selectFirstCarAvailableTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>23/11/14 02:15:42</td>   <td>-13043</td> <td title="&gt;&gt;ShopCarSetupTests.setUp(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@9597028]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>23/11/14 02:16:06</td>   <td>10667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.sortingCarFilterTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@1283bb96]">sortingCarFilterTest</td> 
-  <td>main@511707818</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>23/11/14 02:16:12</td>   <td>16730</td> <td title="&lt;&lt;ShopCarSetupTests.tearDown()[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@9597028]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511707818</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.acceptCookiesTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">acceptCookiesTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:53</td>   <td>32717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.acceptCookiesTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">acceptCookiesTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:25</td>   <td>4105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillCarFilterFormTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">fillCarFilterFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:58</td>   <td>37527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillCarFilterFormTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">fillCarFilterFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:25:39</td>   <td>18731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.fillEnquireNowCarFormNegativeTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,boolean,boolean,boolean,boolean,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@42a48628]">fillEnquireNowCarFormNegativeTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:26:11</td>   <td>49985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.fillEnquireNowCarFormNegativeTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,boolean,boolean,boolean,boolean,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@62379589]">fillEnquireNowCarFormNegativeTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:22</td>   <td>1164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillLocationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">fillLocationFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:54</td>   <td>33828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.fillLocationFormTest(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">fillLocationFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:25:37</td>   <td>16118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.getCarTechDetailTest(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@42a48628]">getCarTechDetailTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:26:08</td>   <td>47847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.getCarTechDetailTest(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@62379589]">getCarTechDetailTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:24</td>   <td>3674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.openCarFilterFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">openCarFilterFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:57</td>   <td>36714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.openCarFilterFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">openCarFilterFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:25:37</td>   <td>16733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.openEnquireNowFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@42a48628]">openEnquireNowFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>23/11/16 03:26:09</td>   <td>48092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopCarExplorerTests.openEnquireNowFormTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarExplorerTests@62379589]">openEnquireNowFormTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:35</td>   <td>13928</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.selectFirstCarAvailableTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">selectFirstCarAvailableTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:26:06</td>   <td>45573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.selectFirstCarAvailableTest()[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">selectFirstCarAvailableTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>23/11/16 03:25:08</td>   <td>-12962</td> <td>&nbsp;</td><td title="&gt;&gt;ShopCarSetupTests.setUp(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@2b662a77]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>23/11/16 03:25:40</td>   <td>19874</td> <td>&nbsp;</td><td title="&gt;&gt;ShopCarSetupTests.setUp(java.lang.String,java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@13c9d689]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:25:34</td>   <td>13051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.sortingCarFilterTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@130d63be]">sortingCarFilterTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>23/11/16 03:26:06</td>   <td>45186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopHomePageTests.sortingCarFilterTest(java.lang.String)[pri:0, instance:com.mercedesbenz.shop.ShopHomePageTests@3754a4bf]">sortingCarFilterTest</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>23/11/16 03:25:40</td>   <td>19617</td> <td>&nbsp;</td><td title="&lt;&lt;ShopCarSetupTests.tearDown()[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@2b662a77]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>23/11/16 03:26:12</td>   <td>51638</td> <td>&nbsp;</td><td title="&lt;&lt;ShopCarSetupTests.tearDown()[pri:0, instance:com.mercedesbenz.shop.ShopCarSetupTests@13c9d689]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261153343</td>   <td></td> </tr>
 </table>
