--- a/test-output/old/ShopHomePageTestsSuite/methods-not-run.html
+++ b/test-output/old/ShopHomePageTestsSuite/methods-not-run.html
@@ -3,4 +3,8 @@
 <tr><td>com.mercedesbenz.shop.ShopCarSetupTests.tearDown</td></tr>
 <tr><td>com.mercedesbenz.shop.ShopCarSetupTests.setUp</td></tr>
 <tr><td>com.mercedesbenz.shop.ShopCarSetupTests.tearDown</td></tr>
+<tr><td>com.mercedesbenz.shop.ShopCarSetupTests.tearDown</td></tr>
+<tr><td>com.mercedesbenz.shop.ShopCarSetupTests.setUp</td></tr>
+<tr><td>com.mercedesbenz.shop.ShopCarSetupTests.tearDown</td></tr>
+<tr><td>com.mercedesbenz.shop.ShopCarSetupTests.setUp</td></tr>
 </table>
